@@ -82,6 +82,7 @@
    <Action name="std_redisplay" />
    <Separator/>
    <Action name="view_save_default_settings" />
+   <Action name="view_apply_settings_to_others" />
   </Menu>
   <Menu name="go" >
    <text>&amp;Go</text>
