@@ -1,3 +1,4 @@
+    ADDED: action: view > Apply settings to other tabs
     ADDED: action: view > Save settings as default (for new instances of this view type)
     ADDED: option: Panel > View > Locale aware sorting
 
